app/services/frontend-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
  labels:
    app.kubernetes.io/instance: apps-haimoney-staging
    io.kompose.service: frontend-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 443
      targetPort: 3000
      protocol: TCP
  selector:
    io.kompose.service: frontend-service
